--- a/figures/04_temp_comp_figures.Rmd
+++ b/figures/04_temp_comp_figures.Rmd
@@ -177,7 +177,7 @@ dev.off()
 
 Finally, organize and plot variance decomposition for biomass and transpiration. 
 ```{r}
-load("/data/output/pecan_runs/env_comp_results/var_decomp_TotLivBiom.Rdata")
+load("/data/output/pecan_runs/temp_comp_results/var_decomp_TotLivBiom.Rdata")
 cols <- brewer.pal(7, name = "Set1")
 
 # Exclude Leaf Respiration Rate and Leaf C:N
@@ -188,7 +188,9 @@ vd1 <- vd %>%
                                   "Light Extinction Coefficient"),
          trait.labels = factor(trait.labels, levels = c("Vcmax", "Stomatal Slope BB", "Specific Leaf Area",
                                                         "Quantum Efficiency", "Light Extinction Coefficient",
-                                                        "Leaf Respiration Rate", "Cuticular Conductance")))
+                                                        "Leaf Respiration Rate", "Cuticular Conductance")),
+         treatment = replace(treatment, treatment == "rn", "cn"))
+
 cv.b <- ggplot(data = vd1) +
   geom_pointrange(aes(x = trait.labels, y = coef.vars, ymin = 0, ymax = coef.vars, 
                       col = treatment), 
@@ -199,7 +201,7 @@ cv.b <- ggplot(data = vd1) +
   theme_classic(base_size = 10) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.y=element_blank()) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)]) +
+  scale_color_manual(name = NULL, values = cols[c(2,1)]) +
   guides(col = FALSE)
 
 el.b <- ggplot(data = vd1) +
@@ -213,7 +215,7 @@ el.b <- ggplot(data = vd1) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.y=element_blank(), 
         axis.text.y=element_blank()) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)]) +
+  scale_color_manual(name = NULL, values = cols[c(2,1)]) +
   guides(col = FALSE)
 
 vdecomp.b <- ggplot(data = vd1) +
@@ -228,14 +230,14 @@ vdecomp.b <- ggplot(data = vd1) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.y=element_blank(), 
         axis.text.y=element_blank(), 
-        legend.position = c(0.9, 0.45),
+        legend.position = c(0.9, 0.6),
         legend.title = element_blank(),
         legend.background = element_blank(),
         legend.key.size = unit(0.4, "cm")) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)])
+  scale_color_manual(name = NULL, values = cols[c(2,1)])
 
 # Plot variance decomposition of transpiration
-load("/data/output/pecan_runs/env_comp_results/var_decomp_TVeg.Rdata")
+load("/data/output/pecan_runs/temp_comp_results/var_decomp_TVeg.Rdata")
 
 # Exclude Leaf Respiration Rate and Leaf C:N
 vd2 <- vd %>%
@@ -245,7 +247,8 @@ vd2 <- vd %>%
                                   "Light Extinction Coefficient"),
          trait.labels = factor(trait.labels, levels = c("Vcmax", "Stomatal Slope BB", "Specific Leaf Area",
                                                         "Quantum Efficiency", "Light Extinction Coefficient",
-                                                        "Leaf Respiration Rate", "Cuticular Conductance")))
+                                                        "Leaf Respiration Rate", "Cuticular Conductance")),
+         treatment = replace(treatment, treatment == "rn", "cn"))
   
 cv.t <- ggplot(data = vd2) +
   geom_pointrange(aes(x = trait.labels, y = coef.vars, ymin = 0, ymax = coef.vars, 
@@ -257,7 +260,7 @@ cv.t <- ggplot(data = vd2) +
   theme_classic(base_size = 10) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.y=element_blank()) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)]) +
+  scale_color_manual(name = NULL, values = cols[c(2,1)]) +
   guides(col = FALSE)
 
 el.t <- ggplot(data = vd2) +
@@ -271,7 +274,7 @@ el.t <- ggplot(data = vd2) +
   theme(plot.title = element_text(hjust = 0.5),
         axis.title.y=element_blank(), 
         axis.text.y=element_blank()) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)]) +
+  scale_color_manual(name = NULL, values = cols[c(2,1)]) +
   guides(col = FALSE)
 
 vdecomp.t <- ggplot(data = vd2) +
@@ -289,9 +292,9 @@ vdecomp.t <- ggplot(data = vd2) +
         legend.position = c(0.9, 0.6),
         legend.background = element_blank(),
         legend.key.size = unit(0.4, "cm")) +
-  scale_color_manual(name = NULL, values = cols[c(4,3,5)])
+  scale_color_manual(name = NULL, values = cols[c(2,1)])
 
-jpeg(filename = "plots/Fig5_vardecomp.jpg", height = 5, width = 7, units = "in", res = 600)
+jpeg(filename = "plots/Fig3_vardecomp.jpg", height = 5, width = 7, units = "in", res = 600)
 cowplot::plot_grid(cv.b, el.b, vdecomp.b, cv.t, el.t, vdecomp.t, nrow = 2, rel_widths = c(1.5, 1, 1.1),
                    labels = c("Biomass", "", "", "Transpiration", "", ""),
                    align = "h", hjust = 0, vjust = 1,
